# TimeLapser

./: .gitignore  pyproject.toml  requirements.txt  setup.py  time_lapser.py  timelapser.py
.github/workflows/: publish_package.yml
timelapser/: main.py  recorder.py  utils.py
