[project]
name = "timelapser"
version = "0.1.3"
description = "Record and save time-lapse videos while you work."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
authors = [
    { name = "Asib Hossen", email = "dev.asib@proton.me" }
]
license = { text = "MIT License" }
homepage = "https://github.com/asibhossen897/TimeLapser"
python_requires = ">=3.10"

[project.urls]
homepage = "https://github.com/asibhossen897/TimeLapser"

[project.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.dependencies]
typer = "*"
numpy = "*"
opencv-python-headless = "*"
mss = "*"
pynput = "*"
rich = "*"

[tool.setuptools]
packages = ["timelapser"]

[tool.setuptools.entry_points]
console_scripts = ["timelapser = timelapser.main:app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
